--- a/app/src/main/res/layout/add_clinic.xml
+++ b/app/src/main/res/layout/add_clinic.xml
@@ -114,7 +114,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/clinic_save_button2"
+            android:id="@+id/clinic_edit_button"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="80dp"
@@ -124,7 +124,7 @@
             app:cornerRadius="100dp" />
 
         <Button
-            android:id="@+id/clinic_save_button3"
+            android:id="@+id/clinic_delete_button"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="80dp"
