--- a/app/src/main/res/layout/activity_book_schedule.xml
+++ b/app/src/main/res/layout/activity_book_schedule.xml
@@ -93,6 +93,36 @@
             android:textSize="16dp"
             android:textStyle="bold" />
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/card_time_slot"
+            android:layout_below="@id/TimeName"
+            app:cardCornerRadius="4dp">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:padding="1dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/timeslot"
+                    android:text="09:00 AM"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+
         <Button
             android:id="@+id/bookAptBtn"
             android:layout_width="match_parent"
