--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -49,7 +49,7 @@
             android:drawableLeft="@drawable/ic_baseline_person_24"
             android:padding="15dp"
             android:hint=" Full Name"
-            android:textColor="@color/cardview_dark_background"
+            android:textColor="@color/white"
             android:textColorHint="@color/cardview_dark_background"
             android:textSize="16dp" />
 
