--- a/app/src/main/res/layout/activity_schedule_appointment.xml
+++ b/app/src/main/res/layout/activity_schedule_appointment.xml
@@ -4,20 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".appointment.ScheduleAppointmentActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black"
         android:theme="@style/Theme.MediAssist.AppBarOverlay">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnBack"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/black"
+            android:paddingTop="15dp"
+            app:icon="@drawable/ic_baseline_arrow_back_24"
+            app:iconTint="@color/primary_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textTitle"
+            style="@style/appbar_title"
+            android:layout_marginStart="4dp"
+            android:layout_toEndOf="@+id/btnBack"
+            android:paddingTop="22dp"
+            android:text="Clinics" />
+
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/black"
             app:popupTheme="@style/Theme.MediAssist.PopupOverlay" />
-
+        </RelativeLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_schedule_appointment" />
