--- a/app/src/main/res/layout/content_schedule_appointment.xml
+++ b/app/src/main/res/layout/content_schedule_appointment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/black"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <fragment
@@ -15,5 +16,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph" />
+        app:navGraph="@navigation/nav_appointment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
